# fastapi-practice

./: alembic.ini  main.py  pyproject.toml  requirements.txt  test_main.py
auth/: auth_controller.py  auth_service.py
auth/dto/: sign_in_dto.py
auth/models/: auth_model.py
common/: constatns.py  jwt_provider.py
config/: database.py  mongodb_provider.py  settings.py
filters/: jwt_filter.py
migration/: env.py
migration/versions/: 57d5811fb92a_create_table.py
models/: user.py
schema/: __init__.py  user.py
users/: users_controller.py  users_service.py
users/dto/: user_dto.py
users/repositories/: user_repository.py
