[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["GwangCheonLee <raitmid56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.3"
httpx = "^0.27.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

