[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["GwangCheonLee <raitmid56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
bcrypt = "^4.1.3"
python-jose = "^3.3.0"
[tool.poetry.group.development.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

